--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".DBHelper"
+            android:exported="false" />
+        <activity
             android:name=".DetailActivity"
             android:exported="false" />
 
